--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jockey+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Italiana&family=Jockey+One&display=swap');
 
-* {
-    border: 1px solid black;
-
+:root{
+    --cor-principal: #F6ECD1;
+    --cor-secundaria: #FC9A1B;
 }
 
 /* header */
@@ -10,7 +12,7 @@ header {
 
     width: 100vw;
     height: 20vh;
-    background-color: blue;
+    background-color: var(--cor-principal);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,14 +22,22 @@ header {
 .header__title {
     font-weight: bold;
     color: black;
-    font-family: "Inter", sans-serif;
+    font-family: "Jockey One", sans-serif;
     font-size: 48px;
 }
 
 .header__title--blue {
-    color: aqua;
+    color:var(--cor-secundaria);
+    font-family: "Italiana", sans-serif;
 }
 
+.header__logo{
+    height: 20vh;
+    display: flex;
+
+    position: fixed;
+    left: 100px; 
+}
 
 /* Titulos */
 h1 {
@@ -52,14 +62,14 @@ main {
 .form {
     display: flex;
     flex-direction: column;
-    width: 608px;
-    height: 204px;
+    width: 408px;
+    height: 304px;
     justify-content: center;
     align-items: center;
     gap: 16px;
     
     border-radius: 25px;
-    background-color: #c5c2c2;
+    background-color: var(--cor-principal);
     box-shadow: 0px 4px 4px 0px black;
     
     position: relative;
@@ -75,7 +85,7 @@ main {
 .form__btn {
     border-radius: 20px;
     padding: 16px 32px;
-    background-color: #5884bd;
+    background-color: var(--cor-secundaria);
     color: #fff;
     border: none;
     box-shadow: 0px 4px 4px 0px black;
@@ -89,7 +99,7 @@ main {
 footer {
     width: 100vw;
     height: 20vh;
-    background-color: rgb(69, 134, 219);
+    background-color: var(--cor-principal);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -110,5 +120,4 @@ footer {
     text-decoration: none;
     color: black;
     font-size: 24px;
-
 }
